[gd_scene load_steps=43 format=2]

[ext_resource path="res://src/scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://src/scripts/Gui/Gui.gd" type="Script" id=2]
[ext_resource path="res://src/Scenes/Gui/MainMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scripts/Gui/LevelGui.gd" type="Script" id=4]
[ext_resource path="res://src/Scenes/Gui/InGameMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/scripts/Gui/OrdersMenu.gd" type="Script" id=6]
[ext_resource path="res://src/scripts/Gui/BackgroundColorRect.gd" type="Script" id=7]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/timer_0.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/shoppingCart.png" type="Texture" id=9]
[ext_resource path="res://src/Scenes/Gui/Themes/OrdersMenuButton.tres" type="Theme" id=10]
[ext_resource path="res://src/scripts/Gui/CardsMenu.gd" type="Script" id=11]
[ext_resource path="res://src/Scenes/Gui/Themes/OrdersMenuTitleLabel.tres" type="Theme" id=12]
[ext_resource path="res://src/scripts/Gui/KorbanButtons.gd" type="Script" id=13]
[ext_resource path="res://src/scripts/Gui/OrdersManager.gd" type="Script" id=14]
[ext_resource path="res://src/Scenes/Gui/GameCompletedMenu.tscn" type="PackedScene" id=15]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/minus_disabled.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/minus.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/plus.png" type="Texture" id=23]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/plus_hover.png" type="Texture" id=24]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/plus_pressed.png" type="Texture" id=25]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/minus_hover.png" type="Texture" id=26]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/minus_pressed.png" type="Texture" id=27]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/plus_disabled.png" type="Texture" id=28]
[ext_resource path="res://src/Scenes/Gui/Themes/OrdersManagerAmountLabel.tres" type="Theme" id=29]
[ext_resource path="res://src/Scenes/Gui/Themes/OrdersManagerAmountBackgroundPanel.tres" type="Theme" id=30]
[ext_resource path="res://src/Scenes/Gui/Themes/OrderBoxLabels.tres" type="Theme" id=32]
[ext_resource path="res://src/Scenes/Gui/Themes/KorbanOrderButton.tres" type="Theme" id=33]
[ext_resource path="res://src/scripts/Gui/CardsMenuBg.gd" type="Script" id=35]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/timer_100.png" type="Texture" id=36]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/barsHorizontal.png" type="Texture" id=37]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/1x/medal2.png" type="Texture" id=38]
[ext_resource path="res://src/Scenes/Gui/Themes/PointsTimerLabels.tres" type="Theme" id=39]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/barsHorizontalHoverDisabled.png" type="Texture" id=40]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/barsHorizontalHoverPressed.png" type="Texture" id=41]
[ext_resource path="res://Assets/Sprites/Gui/Icons/White/2x/barsHorizontalHover.png" type="Texture" id=42]
[ext_resource path="res://src/scripts/Gui/PointsTimerMenu.gd" type="Script" id=43]
[ext_resource path="res://src/Scenes/Gui/Themes/FlatPanel.tres" type="Theme" id=45]
[ext_resource path="res://src/Scenes/Gui/LevelCompletedMenu.tscn" type="PackedScene" id=46]
[ext_resource path="res://src/Scenes/Gui/LevelFailedMenu.tscn" type="PackedScene" id=47]
[ext_resource path="res://Assets/Audio/music/zen-garden.mp3" type="AudioStream" id=48]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0745098, 0.113725, 0.337255, 1 )
border_width_top = 10
border_width_bottom = 10
border_color = Color( 0.0745098, 0.113725, 0.337255, 1 )
border_blend = true
anti_aliasing_size = 3

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 1 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Levels" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BackgroundColorRect" type="ColorRect" parent="Gui"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.67451, 0.498039, 0.223529, 1 )
script = ExtResource( 7 )

[node name="CardsMenuBg" type="Panel" parent="Gui"]
visible = false
anchor_right = 1.0
anchor_bottom = 0.268
margin_bottom = -0.432007
theme = SubResource( 2 )
script = ExtResource( 35 )

[node name="CreditsBg" type="ColorRect" parent="Gui"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="GuiSafeArea" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="MainMenu" parent="GuiSafeArea" instance=ExtResource( 3 )]

[node name="LevelGui" type="Control" parent="GuiSafeArea"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="CardsBackground" type="Panel" parent="GuiSafeArea/LevelGui"]
anchor_top = 0.06
anchor_right = 1.0
anchor_bottom = 0.268
margin_top = 0.559998
margin_bottom = -0.432007
theme = ExtResource( 45 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardsMenu" type="Control" parent="GuiSafeArea/LevelGui"]
anchor_left = 0.5
anchor_top = 0.163
anchor_right = 0.5
anchor_bottom = 0.163
margin_left = -300.0
margin_top = -104.912
margin_right = 300.0
margin_bottom = 107.088
script = ExtResource( 11 )

[node name="CardsMenuPositions" type="Control" parent="GuiSafeArea/LevelGui"]
anchor_left = 0.5
anchor_top = 0.163
anchor_right = 0.5
anchor_bottom = 0.163
margin_left = -300.0
margin_top = -104.912
margin_right = 300.0
margin_bottom = 107.088
mouse_filter = 2

[node name="Pos1" type="Position2D" parent="GuiSafeArea/LevelGui/CardsMenuPositions"]
position = Vector2( 120, 105 )

[node name="Pos2" type="Position2D" parent="GuiSafeArea/LevelGui/CardsMenuPositions"]
position = Vector2( 300, 105 )

[node name="Pos3" type="Position2D" parent="GuiSafeArea/LevelGui/CardsMenuPositions"]
position = Vector2( 480, 105 )

[node name="PointsTimerMenu" type="Control" parent="GuiSafeArea/LevelGui"]
pause_mode = 1
anchor_top = 0.268
anchor_right = 1.0
anchor_bottom = 0.268
margin_top = -0.432007
margin_bottom = 132.568
script = ExtResource( 43 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerTextureProgress" type="TextureProgress" parent="GuiSafeArea/LevelGui/PointsTimerMenu"]
pause_mode = 1
margin_left = 24.0
margin_top = 22.0
margin_right = 88.0
margin_bottom = 86.0
step = 0.017
value = 99.994
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 36 )
fill_mode = 5

[node name="TimeLeft" type="Label" parent="GuiSafeArea/LevelGui/PointsTimerMenu"]
pause_mode = 1
margin_left = 96.0
margin_top = 33.0
margin_right = 299.0
margin_bottom = 75.0
theme = ExtResource( 39 )
text = "05:50"

[node name="IngameMenuButton" type="TextureButton" parent="GuiSafeArea/LevelGui/PointsTimerMenu"]
pause_mode = 1
anchor_left = 1.0
anchor_right = 1.0
margin_left = -91.0
margin_top = 14.0
margin_right = 9.0
margin_bottom = 114.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 37 )
texture_pressed = ExtResource( 41 )
texture_hover = ExtResource( 42 )
texture_disabled = ExtResource( 40 )

[node name="PointsIcon" type="TextureRect" parent="GuiSafeArea/LevelGui/PointsTimerMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -76.0
margin_top = 29.0
margin_right = -26.0
margin_bottom = 79.0
texture = ExtResource( 38 )

[node name="Points" type="Label" parent="GuiSafeArea/LevelGui/PointsTimerMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -27.0
margin_top = 33.0
margin_right = 176.0
margin_bottom = 75.0
theme = ExtResource( 39 )
text = "10/10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsTween" type="Tween" parent="GuiSafeArea/LevelGui/PointsTimerMenu"]

[node name="OrdersMenu" type="Control" parent="GuiSafeArea/LevelGui"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="GuiSafeArea/LevelGui/OrdersMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.247059, 0.490196, 0.698039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="HBoxContainer" parent="GuiSafeArea/LevelGui/OrdersMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -300.0
margin_right = 300.0
margin_bottom = 89.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="GuiSafeArea/LevelGui/OrdersMenu/TitleContainer"]
margin_left = 89.0
margin_right = 109.0
margin_bottom = 89.0
rect_min_size = Vector2( 20, 0 )

[node name="Title" type="Label" parent="GuiSafeArea/LevelGui/OrdersMenu/TitleContainer"]
margin_left = 113.0
margin_right = 510.0
margin_bottom = 89.0
theme = ExtResource( 12 )
text = "Order Menu"

[node name="OrdersManager" type="VBoxContainer" parent="GuiSafeArea/LevelGui/OrdersMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -895.0
margin_right = 197.0
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kid" type="HBoxContainer" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager"]
margin_right = 497.0
margin_bottom = 100.0
alignment = 1
script = ExtResource( 13 )

[node name="Background2" type="Panel" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Kid"]
margin_left = 32.0
margin_right = 152.0
margin_bottom = 100.0
rect_min_size = Vector2( 120, 100 )
mouse_default_cursor_shape = 2
theme = ExtResource( 30 )

[node name="Label" type="Label" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Kid/Background2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
theme = ExtResource( 32 )
text = "Kid"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinusButton" type="TextureButton" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Kid"]
margin_left = 156.0
margin_right = 256.0
margin_bottom = 100.0
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 26 )
texture_disabled = ExtResource( 21 )

[node name="Background" type="Panel" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Kid"]
margin_left = 260.0
margin_right = 360.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
theme = ExtResource( 30 )

[node name="Amount" type="Label" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Kid/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 29 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusButton" type="TextureButton" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Kid"]
margin_left = 364.0
margin_right = 464.0
margin_bottom = 100.0
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 25 )
texture_hover = ExtResource( 24 )
texture_disabled = ExtResource( 28 )

[node name="MarginContainer3" type="MarginContainer" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager"]
margin_top = 104.0
margin_right = 497.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( 447.393, 15.165 )
mouse_filter = 2

[node name="Bull" type="HBoxContainer" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager"]
margin_top = 158.0
margin_right = 497.0
margin_bottom = 258.0
alignment = 1
script = ExtResource( 13 )

[node name="Background2" type="Panel" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Bull"]
margin_left = 32.0
margin_right = 152.0
margin_bottom = 100.0
rect_min_size = Vector2( 120, 100 )
mouse_default_cursor_shape = 2
theme = ExtResource( 30 )

[node name="Label" type="Label" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Bull/Background2"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 32 )
text = "Bull"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinusButton" type="TextureButton" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Bull"]
margin_left = 156.0
margin_right = 256.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 26 )
texture_disabled = ExtResource( 21 )

[node name="Background" type="Panel" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Bull"]
margin_left = 260.0
margin_right = 360.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
theme = ExtResource( 30 )

[node name="Amount" type="Label" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Bull/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 29 )
text = "0"
align = 1
valign = 1

[node name="PlusButton" type="TextureButton" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Bull"]
margin_left = 364.0
margin_right = 464.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 25 )
texture_hover = ExtResource( 24 )
texture_disabled = ExtResource( 28 )

[node name="MarginContainer4" type="MarginContainer" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager"]
margin_top = 262.0
margin_right = 497.0
margin_bottom = 312.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( 447.393, 15.165 )
mouse_filter = 2

[node name="Lamb" type="HBoxContainer" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager"]
margin_top = 316.0
margin_right = 497.0
margin_bottom = 416.0
alignment = 1
script = ExtResource( 13 )

[node name="Background2" type="Panel" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Lamb"]
margin_left = 32.0
margin_right = 152.0
margin_bottom = 100.0
rect_min_size = Vector2( 120, 100 )
mouse_default_cursor_shape = 2
theme = ExtResource( 30 )

[node name="Label" type="Label" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Lamb/Background2"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 32 )
text = "Lamb"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinusButton" type="TextureButton" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Lamb"]
margin_left = 156.0
margin_right = 256.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 26 )
texture_disabled = ExtResource( 21 )

[node name="Background" type="Panel" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Lamb"]
margin_left = 260.0
margin_right = 360.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
theme = ExtResource( 30 )

[node name="Amount" type="Label" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Lamb/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 29 )
text = "0"
align = 1
valign = 1

[node name="PlusButton" type="TextureButton" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Lamb"]
margin_left = 364.0
margin_right = 464.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 25 )
texture_hover = ExtResource( 24 )
texture_disabled = ExtResource( 28 )

[node name="MarginContainer5" type="MarginContainer" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager"]
margin_top = 420.0
margin_right = 497.0
margin_bottom = 470.0
rect_min_size = Vector2( 0, 50 )
rect_pivot_offset = Vector2( 447.393, 15.165 )
mouse_filter = 2

[node name="Ram" type="HBoxContainer" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager"]
margin_top = 474.0
margin_right = 497.0
margin_bottom = 574.0
alignment = 1
script = ExtResource( 13 )

[node name="Background2" type="Panel" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Ram"]
margin_left = 32.0
margin_right = 152.0
margin_bottom = 100.0
rect_min_size = Vector2( 120, 100 )
mouse_default_cursor_shape = 2
theme = ExtResource( 30 )

[node name="Label" type="Label" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Ram/Background2"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 32 )
text = "Ram"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinusButton" type="TextureButton" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Ram"]
margin_left = 156.0
margin_right = 256.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 26 )
texture_disabled = ExtResource( 21 )

[node name="Background" type="Panel" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Ram"]
margin_left = 260.0
margin_right = 360.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
theme = ExtResource( 30 )

[node name="Amount" type="Label" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Ram/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 29 )
text = "0"
align = 1
valign = 1

[node name="PlusButton" type="TextureButton" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Ram"]
margin_left = 364.0
margin_right = 464.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 25 )
texture_hover = ExtResource( 24 )
texture_disabled = ExtResource( 28 )

[node name="MarginContainer2" type="MarginContainer" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager"]
margin_top = 578.0
margin_right = 497.0
margin_bottom = 653.0
rect_min_size = Vector2( 0, 75 )
rect_pivot_offset = Vector2( 447.393, 15.165 )
mouse_filter = 2

[node name="CompleteOrder" type="HBoxContainer" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager"]
margin_top = 657.0
margin_right = 497.0
margin_bottom = 782.0
alignment = 1

[node name="CompleteOrderButton" type="Button" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/CompleteOrder"]
margin_left = 111.0
margin_right = 386.0
margin_bottom = 125.0
rect_min_size = Vector2( 275, 125 )
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 33 )

[node name="Label" type="Label" parent="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/CompleteOrder/CompleteOrderButton"]
anchor_left = -0.00282837
anchor_right = 0.997172
anchor_bottom = 1.08
margin_left = -0.707092
margin_top = -1.41425
margin_right = -0.707092
margin_bottom = -1.41425
theme = ExtResource( 32 )
text = "Complete Order"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OrdersMenuButton" type="Button" parent="GuiSafeArea/LevelGui"]
anchor_left = 1.0
anchor_top = 0.762
anchor_right = 1.0
anchor_bottom = 0.762
margin_left = -102.0
margin_top = -85.288
margin_bottom = 79.712
rect_min_size = Vector2( 100, 165 )
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 10 )
icon = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InGameMenu" parent="GuiSafeArea/LevelGui" instance=ExtResource( 5 )]
pause_mode = 2

[node name="LevelCompletedMenu" parent="GuiSafeArea/LevelGui" instance=ExtResource( 46 )]
visible = false

[node name="LevelFailedMenu" parent="GuiSafeArea/LevelGui" instance=ExtResource( 47 )]
visible = false

[node name="GameCompletedMenu" parent="GuiSafeArea/LevelGui" instance=ExtResource( 15 )]
visible = false

[node name="ForegroundColorRect" type="ColorRect" parent="GuiSafeArea"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="Tween" type="Tween" parent="GuiSafeArea"]

[node name="Sounds" type="Node2D" parent="."]
pause_mode = 2

[node name="Music" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 48 )
volume_db = -12.0
autoplay = true

[node name="Sfx" type="AudioStreamPlayer" parent="Sounds"]

[node name="Sfx2" type="AudioStreamPlayer" parent="Sounds"]

[node name="Sfx3" type="AudioStreamPlayer" parent="Sounds"]

[connection signal="handleCardsMenuBg" from="." to="Gui/CardsMenuBg" method="_on_Game_handleCardsMenuBg"]
[connection signal="handleLevelGui" from="." to="GuiSafeArea/LevelGui" method="_on_Game_handleLevelGui"]
[connection signal="handleMainMenu" from="." to="GuiSafeArea/MainMenu" method="_on_Game_handleMainMenu"]
[connection signal="handleMainMenuBg" from="." to="Gui/BackgroundColorRect" method="_on_Game_handleMainMenuBg"]
[connection signal="tree_entered" from="." to="." method="_on_Game_tree_entered"]
[connection signal="loadLevel" from="GuiSafeArea/MainMenu" to="." method="_on_MainMenu_loadLevel"]
[connection signal="pressed" from="GuiSafeArea/LevelGui/PointsTimerMenu/IngameMenuButton" to="GuiSafeArea/LevelGui/InGameMenu" method="_on_IngameMenuButton_pressed"]
[connection signal="tween_completed" from="GuiSafeArea/LevelGui/PointsTimerMenu/PointsTween" to="GuiSafeArea/LevelGui/PointsTimerMenu" method="_on_PointsTween_tween_completed"]
[connection signal="completeOrder" from="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager" to="GuiSafeArea/LevelGui/OrdersMenu" method="_on_OrdersManager_completeOrder"]
[connection signal="resetAll" from="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager" to="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Kid" method="_on_OrdersManager_resetAll"]
[connection signal="resetAll" from="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager" to="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Bull" method="_on_OrdersManager_resetAll"]
[connection signal="resetAll" from="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager" to="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Lamb" method="_on_OrdersManager_resetAll"]
[connection signal="resetAll" from="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager" to="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Ram" method="_on_OrdersManager_resetAll"]
[connection signal="pressed" from="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Kid/MinusButton" to="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Kid" method="_on_MinusButton_pressed"]
[connection signal="pressed" from="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Kid/PlusButton" to="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Kid" method="_on_PlusButton_pressed"]
[connection signal="pressed" from="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Bull/MinusButton" to="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Bull" method="_on_MinusButton_pressed"]
[connection signal="pressed" from="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Bull/PlusButton" to="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Bull" method="_on_PlusButton_pressed"]
[connection signal="pressed" from="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Lamb/MinusButton" to="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Lamb" method="_on_MinusButton_pressed"]
[connection signal="pressed" from="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Lamb/PlusButton" to="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Lamb" method="_on_PlusButton_pressed"]
[connection signal="pressed" from="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Ram/MinusButton" to="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Ram" method="_on_MinusButton_pressed"]
[connection signal="pressed" from="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Ram/PlusButton" to="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/Ram" method="_on_PlusButton_pressed"]
[connection signal="pressed" from="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager/CompleteOrder/CompleteOrderButton" to="GuiSafeArea/LevelGui/OrdersMenu/OrdersManager" method="_on_CompleteOrderButton_pressed"]
[connection signal="pressed" from="GuiSafeArea/LevelGui/OrdersMenuButton" to="GuiSafeArea/LevelGui" method="_on_OrdersMenuButton_pressed"]
[connection signal="tween_completed" from="GuiSafeArea/Tween" to="GuiSafeArea" method="_on_Tween_tween_completed"]
[connection signal="tree_entered" from="Sounds" to="." method="_on_Sounds_tree_entered"]
